# spincoater

./: .gitignore  ESP32_spincoater_firmware.ino  LICENSE.txt  README.md  UNO_R3_spincoater_firmware.ino
arduino/GUIv3/: GUIv3.ino  GUIv3.prj  ReadMe.md
arduino/GUIv3/gui_backup/: GUIv3.ino.##0  GUIv3.ino.##3  GUIv3.ino.##5  GUIv3.prj.##0  GUIv3.prj.##1  GUIv3.prj.##3  GUIv3_GSLC.h.##0  GUIv3_GSLC.h.##1  GUIv3_GSLC.h.##6
arduino/esp32_arduino/: README.md
arduino/esp32_arduino/ESP32_spincoater_firmware/: ESP32_spincoater_firmware.ino  GUIv3.ino  GUIv3_GSLC.h  README.md
arduino/esp32_arduino/pwm/: README.md  pwm.ino
arduino/esp32_simple_pwm/: README.md  esp32_simple_pwm.ino
arduino/example_code/: SpinCoaterV3Example.ino
esp32/wroom_micropython/: README.md  main.py
motor_controllers/esp32/: Cargo.toml  README.md
motor_controllers/esp32_arduino/pwm/: README.md  pwm.ino
motor_controllers/microbit/: Cargo.toml  README.md  memory.x
motor_controllers/microbit/.cargo/: config.toml
motor_controllers/microbit/src/: main.rs
rust/: Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  rust-toolchain.toml
rust/cross/: README.md
rust/cross/esp32/: .clippy.toml  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix
rust/cross/esp32/.cargo/: config.toml
rust/cross/esp32/editor_configurations/helix/: languages.toml
rust/cross/esp32/editor_configurations/zed/: settings.json
rust/cross/esp32/src/: lib.rs  pid.rs  rpc.rs
rust/cross/esp32/src/gpio/: encoder.rs  mod.rs  pwm.rs
rust/cross/esp32/src/gpio/display/: mod.rs
rust/cross/esp32/src/gpio/display/terminal/: channel.rs  mod.rs  ui.rs
rust/cross/esp32/src/gpio/display/touchscreen/: mod.rs  xpt_2046.rs
rust/cross/esp32/src/gpio/display/touchscreen/xpt_2046/: mod.rs
rust/cross/esp32/src/gpio/encoder/: mod.rs
rust/cross/esp32/src/gpio/pwm/: mod.rs
rust/cross/esp32/src/motion_profile/: mod.rs
rust/cross/esp32/src/runners/: mod.rs  motion_profile.rs
rust/cross/esp32/src/runners/rpm/: channel.rs  mod.rs
rust/cross/mc_esp32/: Cargo.toml  DEVELOPMENT.md  README.md  build.rs  flake.nix  rust-toolchain.toml
rust/cross/mc_esp32/.cargo/: config.toml
rust/cross/mc_esp32/editor_configurations/vscode/: extensions.json  launch.json  settings.json
rust/cross/mc_esp32/nix/: devshell.nix
rust/cross/mc_esp32/src/: lib.rs
rust/cross/mc_esp32/src/gpio/: mod.rs
rust/cross/mc_esp32/src/gpio/display/: mod.rs
rust/cross/mc_esp32/src/gpio/display/terminal/: channel.rs  mod.rs  ui.rs
rust/cross/mc_esp32/src/gpio/display/terminal/ui/: mod.rs
rust/cross/mc_esp32/src/gpio/encoder/: mod.rs
rust/cross/mc_esp32/src/gpio/pwm/: mod.rs
rust/cross/mc_esp32/src/motion_profile/: mod.rs
rust/cross/mc_esp32/src/pwm/: mod.rs
rust/cross/mc_esp32/src/rpc/: mod.rs
rust/cross/mc_esp32/src/tcp/: error.rs  mod.rs
rust/cross/mc_esp32/src/uart/: mod.rs
rust/cross/mc_esp32/src/wifi/: channel.rs  mod.rs
rust/cross/mc_esp32/src/wifi/tcp/: error.rs  mod.rs
rust/cross/mc_microbit/: Cargo.toml  Embed.toml  README.md  build.rs
rust/cross/mc_microbit/src/: main.rs
rust/host_tui/: Cargo.toml  README.md
rust/host_tui/motion_profiles/: default.csv
rust/host_tui/src/: lib.rs  main.rs
rust/host_tui/src/app/: event.rs  mod.rs  state.rs  ui.rs
rust/host_tui/src/app/event/: mod.rs
rust/host_tui/src/app/message/: mod.rs
rust/host_tui/src/app/state/: mod.rs
rust/host_tui/src/app/ui/: mod.rs
rust/host_tui/src/event/: mod.rs
rust/host_tui/src/ui/: mod.rs
rust/linear_regression/: Cargo.toml  README.md
rust/linear_regression/src/: main.rs
rust/messages/: Cargo.toml
rust/messages/src/: lib.rs
rust/motion_profiles/: constant.csv  default.csv  increasing.csv
rust/sc_messages/: Cargo.toml  README.md
rust/sc_messages/src/: commands.rs  icd.rs  lib.rs  motion_profile.rs  pwm.rs  touchscreen.rs  vacuum_pump.rs
rust/sc_messages/src/motion_profile/: mod.rs
spin coater power delivery pcb/: spin coater power delivery.kicad_prl  spin coater power delivery.kicad_pro  spin coater power delivery.kicad_sch  ~spin coater power delivery.kicad_sch.lck
