[workspace]
resolver = "3"
members = ["host_tui", "sc_messages"]
exclude = ["cross/*"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# For postcard
serde = { version = "1.0.228", default-features = false }
# For no_std serialization
postcard = { version = "1.1.3", default-features = false }
ratatui = "0.30.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures = "0.3.32"
tokio = "1.51.0"
bytes = "1.11.1"
chrono = "0.4.44"
cfg-if = "1.0.4"
ringbuffer = "0.16.0"
thiserror = "2.0.18"
# For logging
csv = "1.4.0"
# For loading motion profile files
rfd = "0.17.2"
# For easier communication between the MCU and PC
postcard-rpc = "0.12.1"
# For postcard-rpc
postcard-schema = "0.2.5"


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
