[package]
name = "host_tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# For simplifying TCP socket send/recv
bytes = { workspace = true }
# For simplifying dev and release specific 'use' and 'const' statements
cfg-if = { workspace = true }
# To get the local date and time
chrono = { workspace = true }
# For pretty tui errors
color-eyre = { workspace = true }
# For tui
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
tui-input = { workspace = true }
# For tokio
futures = { workspace = true }
postcard = { workspace = true }
# For storing the most recent messages and discarding old ones
ringbuffer = { workspace = true }
sc_messages = { path = "../sc_messages", features = ["std"] }
# For async messages from MCU
tokio = { workspace = true, features = ["full"] }
# The tick rate should be set to whatever the microcontroller's version of esp-rtos uses.
# https://github.com/esp-rs/esp-hal/blob/1.0.0/esp-rtos/Cargo.toml#L55
embassy-time = { workspace = true, features = ["tick-hz-1_000_000"] }


[features]
dev-socket = []

[lints]
workspace = true
