[package]
name = "host_tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# To get the local date and time
chrono = { workspace = true }
# For pretty tui errors
color-eyre = { workspace = true }
# For tui
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
# For tokio
futures = { workspace = true }
postcard = { workspace = true }
# For storing the most recent messages and discarding old ones
ringbuffer = { workspace = true }
sc_messages = { path = "../sc_messages", features = ["std"] }
# For async messages from MCU
tokio = { workspace = true, features = ["full"] }
csv = { workspace = true }
rfd = { workspace = true }
# For UART communication with the MCU
postcard-rpc = { workspace = true, features = ["cobs-serial", "use-std"] }


[features]
dev-socket = []

[lints]
workspace = true
