[package]
name = "sc_messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
postcard = { workspace = true, features = ["heapless"] }
sc_messages = { path = ".", features = ["std"] }

[features]
std = ["dep:thiserror"]

[lints]
workspace = true
