[package]
name = "sc_messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, optional = true }
postcard-rpc = { workspace = true }
postcard-schema = { workspace = true, features = ["derive"] }
embedded-graphics-core.workspace = true

[features]
std = ["dep:thiserror"]

[lints]
workspace = true
