[workspace]

[package]
name = "esp32"
authors = ["Spincoater Members"]
edition = "2024"
rust-version = "1.95"
version = "0.1.0"
license = "MIT"

[dependencies]
esp-hal = { version = "~1.0.0", features = ["esp32", "defmt", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp32",
  "defmt",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "defmt"] }
esp-alloc = "0.9.0"
esp-sync = { version = "0.1.1", features = ["esp32"] }

embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }

panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

defmt = "1.0.1"
bytes = { version = "1.11.1", default-features = false }
heapless = "0.9.3"
static_cell = "2.1.1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-defmt"] }
# For rpc
postcard-rpc = { version = "0.12.1", features = ["embedded-io-async-0_6-server"] }

sc_messages = { path = "../../sc_messages"}

# The dependencies below are used for the display.
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }
embedded-graphics = { version = "0.8.2", features = ["defmt"] }
embedded-graphics-core = "0.4.1"
mipidsi = { version = "0.10.0", features = ["defmt"] }
mousefood = { version = "0.5.0", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["all-widgets"] }
# Alternate mousefood font with unnecessary characters removed to save binary space
ibm437 = { version = "0.4.0", default-features = false, features = ["embedded-graphics-backend", "regular9x14"] }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'

[lib]
test = false

[[test]]
name = "template"
harness = false

[[bin]]
name = "pin_usage_checker"
test = false
bench = false

[[bin]]
name = "pwm"
test = false
bench = false

[[bin]]
name = "spincoater_with_pc"
test = false

[features]
uart_over_adapter = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
arithmetic_side_effects = "deny"
