[workspace]

[package]
name = "mc_esp32"
authors = ["Anthony Pagone"]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
license = "MIT"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-time = { version = "0.5.0", features = ["log"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.1", features = ["gatt"] }
critical-section = "1.2.0"
static_cell      = "2.1.1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["defmt"] }

sc_messages = { path = "../../sc_messages" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[lib]
test = false
bench = false

[[bin]]
name = "pwm"
test = false
bench = false

[[bin]]
name = "wifi_pwm"
test = false
bench = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
