[workspace]

[package]
name = "mc_esp32"
authors = ["Anthony Pagone"]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
license = "MIT"

[dependencies]
esp-hal = { version = "1.0", features = ["esp32", "defmt", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
  "defmt",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }

embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }

panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }


embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-net = { version = "0.9.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

defmt = "1.0.1"
bytes = { version = "1.11.1", default-features = false }
heapless = "0.9.2"
critical-section = "1.2.0"
static_cell = "2.1.1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-defmt"] }

sc_messages = { path = "../../sc_messages" }

# The dependencies below are used for the display.
embedded-hal-bus = "0.3.0"
embedded-graphics = { version = "0.8.2", features = ["defmt"] }
mipidsi = { version = "0.10.0", features = ["defmt"] }
mousefood = { version = "0.5.0", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["all-widgets"] }
# Alternate mousefood font with unnecessary characters removed to save binary space
ibm437 = { version = "0.3.3", default-features = false, features = ["regular9x14"] }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }

# Override mipidsi's dependency on embdedded-hal version "=1.0.0-alpha.7"
[dependencies.embedded-hal]
version = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# https://docs.espressif.com/projects/rust/esp-radio/0.17.0/esp32/esp_radio/index.html#optimization-level
[profile.release.package.esp-radio]
opt-level = 3

# https://docs.rs/mousefood/latest/mousefood/#performance-and-hardware-support
[profile.release.package.mousefood]
opt-level = 3

[lib]
test = false

[[test]]
name = "template"
harness = false

[[bin]]
name = "spincoater"
test = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
