[workspace]

[package]
name = "mc_microbit"
authors = ["Anthony Pagone"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-storage = "0.3.1"

embassy-nrf = { version = "0.9.0", features = [
  "defmt",
  "nrf52833",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp", rev = "c8bc66802d694d306ea02911483e89a44c939147" }

[[bin]]
name = "mc_microbit"
test = false
bench = false

[profile.release]
debug = 2
lto = true
opt-level = 's'

[profile.dev]
debug = 2
lto = true
opt-level = "s"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
